--- a/313552034_fin/Makefile
+++ b/313552034_fin/Makefile
@@ -1,6 +1,7 @@
 SHELL := /bin/bash
 
 all:
+	sudo wg-quick up wg0
 	docker compose up -d
 	sudo ovs-vsctl add-br ovs1
 	sudo ovs-vsctl add-br ovs2
@@ -8,6 +9,7 @@ all:
 
 
 clean:
+	sudo wg-quick down wg0
 	docker compose down
 	sudo ovs-vsctl del-br ovs1
 	sudo ovs-vsctl del-br ovs2
