--- a/313552034_fin/config/R2/frr.conf
+++ b/313552034_fin/config/R2/frr.conf
@@ -12,4 +12,7 @@ router bgp 65821
     neighbor 192.168.63.1 advertisement-interval 5
 !
 log stdout
+log file /var/log/frr/bgpd.log
+log syslog
+service advanced-vty
 line vty
