--- a/313552034_fin/supplement/containers/frr/Dockerfile
+++ b/313552034_fin/supplement/containers/frr/Dockerfile
@@ -1,4 +1,4 @@
 FROM frrouting/frr-debian
 LABEL maintainer=N0BALL
 
-RUN apt update -y && apt install -y iproute2 arping mtr telnet
+RUN apt update -y && apt install -y iproute2 arping mtr telnet tcpdump
