add ipv6 config

--- a/313552034_fin/config/R1/frr.conf
+++ b/313552034_fin/config/R1/frr.conf
@@ -7,21 +7,31 @@ fpm connection ip 192.168.100.2 port 2620
 router bgp 65820
 bgp router-id 192.168.70.82
 timers bgp 3 9
-neighbor PEER peer-group
-neighbor PEER ebgp
-neighbor PEER timers connect 5
-neighbor PEER advertisement-interval 5
+
 neighbor 192.168.63.2 remote-as 65821
-neighbor 192.168.63.2 peer-group PEER
+neighbor 192.168.63.2 timers connect 5
+neighbor 192.168.63.2 advertisement-interval 5
+neighbor 192.168.63.2 ebgp-multihop
+
 neighbor 192.168.70.253 remote-as 65000
 neighbor 192.168.70.253 password winlab.nycu
-neighbor 192.168.70.253 peer-group PEER
+neighbor 192.168.70.253 timers connect 5
+neighbor 192.168.70.253 advertisement-interval 5
+neighbor 192.168.70.253 ebgp-multihop
+neighbor 192.168.70.253 solo
+
 neighbor fd63::2 remote-as 65821
-neighbor fd63::2 peer-group PEER
+neighbor fd63::2 timers connect 5
+neighbor fd63::2 advertisement-interval 5
+neighbor fd63::2 ebgp-multihop
+
 neighbor fd70::fe remote-as 65000
 neighbor fd70::fe password winlab.nycu
-neighbor fd70::fe peer-group PEER
+neighbor fd70::fe timers connect 5
+neighbor fd70::fe advertisement-interval 5
+neighbor fd70::fe ebgp-multihop
 neighbor fd70::fe solo
+
 address-family ipv4 unicast
     network 172.16.82.0/24
     neighbor 192.168.63.2 activate
