--- a/313552034_fin/config/R2/frr.conf
+++ b/313552034_fin/config/R2/frr.conf
@@ -2,14 +2,30 @@
 frr defaults datacenter
 !
 router bgp 65821
-    bgp router-id 192.168.63.2 
-    timers bgp 3 9
-    network 172.17.82.0/24
+bgp router-id 192.168.63.2 
+timers bgp 3 9
 !
-    neighbor 192.168.63.1 remote-as 65820
-    neighbor 192.168.63.1 ebgp-multihop
-    neighbor 192.168.63.1 timers connect 5
-    neighbor 192.168.63.1 advertisement-interval 5
+neighbor 192.168.63.1 remote-as 65820
+neighbor 192.168.63.1 ebgp-multihop
+neighbor 192.168.63.1 timers connect 5
+neighbor 192.168.63.1 advertisement-interval 5
+
+neighbor fd63::1 remote-as 65820
+neighbor fd63::1 ebgp-multihop
+neighbor fd63::1 timers connect 5
+neighbor fd63::1 advertisement-interval 5
+!
+address-family ipv4 unicast
+    network 172.17.82.0/24
+    neighbor 192.168.63.1 activate
+    no neighbor fd63::1 activate
+exit-address-family
+!
+address-family ipv6 unicast
+    network 2a0b:4e07:c4:182::2/64
+    neighbor fd63::1 activate
+    no neighbor 192.168.63.1 activate
+exit-address-family
 !
 log stdout
 log file /var/log/frr/bgpd.log
