--- a/313552034_fin/config/R1/frr.conf
+++ b/313552034_fin/config/R1/frr.conf
@@ -41,7 +41,7 @@ address-family ipv4 unicast
 exit-address-family
 !
 address-family ipv6 unicast
-    network 2a0b:4e07:cf:1::/64
+    network 2a0b:4e07:c4:82::69/64
     neighbor fd63::fe activate
     neighbor fd70::2 activate
     no neighbor 192.168.63.2 activate
