try to connect bgp first not done yet maybe we do not need to connect

--- a/313552034_fin/docker-compose.yml
+++ b/313552034_fin/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   onos:
-    image: onosproject/onos:latest
+    image: onosproject/onos:2.7-latest
     container_name: onos
     privileged: true
     environment:
-      - ONOS_APPS=openflow,fpm,gui2,fwd
+      - ONOS_APPS=openflow,fpm,nycu.sdnfv.bridge,nycu.sdnfv.proxyarp
     ports:
       - "2620:2620"
       - "8181:8181"
