--- a/313552034_fin/vrouter/pom.xml
+++ b/313552034_fin/vrouter/pom.xml
@@ -87,11 +87,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <!-- Uncomment to disable checkstyle validation
+                <!-- Uncomment to disable checkstyle validation -->
                 <configuration>
                     <skip>true</skip>
                 </configuration>
-                -->
+               
             </plugin>
         </plugins>
     </build>
