--- a/313552034_fin/config.json
+++ b/313552034_fin/config.json
@@ -1,9 +1,9 @@
 {
     "ports":{
-        "of:0000000000000002/10":{
+        "of:00005e8f1d94de46/3":{
             "interfaces":[
                 {
-                    "name":"intf1",
+                    "name":"bgp",
                     "ips":[
                         "192.168.70.82/24",
                         "fd70::82/64"
