--- a/313552034_fin/Makefile
+++ b/313552034_fin/Makefile
@@ -18,21 +18,28 @@ onos:
     -o UserKnownHostsFile=/dev/null \
     onos@localhost -p 8101
 log:
-	docker logs onos
+	docker logs onos --since 1s -f
 install:
 	onos-netcfg onos@localhost ./config.json
 	onos-app onos@localhost install! ./vrouter/target/vrouter-1.0-SNAPSHOT.oar
 uninstall:
-	onos-app onos@localhost uninstall nctu.sdnfv.bridge
-	onos-app onos@localhost uninstall nctu.sdnfv.proxyarp
+	onos-app onos@localhost uninstall nctu.winlab.bridge
+	onos-app onos@localhost uninstall nctu.winlab.ProxyArp
 	onos-app onos@localhost uninstall nycu.winlab.vrouter
-	onos onos@localhost remove-intent nycu.winlab.vrouter
-	onos onos@localhost purge-intents
+	# onos onos@localhost remove-intent nycu.winlab.vrouter
+	# onos onos@localhost purge-intents
 build:
 	mvn -f ./vrouter clean install -DskipTests
 	mvn -f ./supplement/flow_objective_sample clean install -DskipTests
+	mvn -f ./supplement/project5_311555026 clean install -DskipTests
 env:
 	onos-app onos@localhost install! ./supplement/project5_311555026/target/ProxyArp-1.0-SNAPSHOT.oar
 	onos-app onos@localhost install! ./supplement/flow_objective_sample/target/bridge-1.0-SNAPSHOT.oar
 ping:
 	docker exec -it h1 ping 172.17.82.2 -c1
+vu:
+	onos-app onos@localhost uninstall nycu.winlab.vrouter
+pu:
+	onos-app onos@localhost uninstall nctu.winlab.ProxyArp
+pi:
+	onos-app onos@localhost install! ./supplement/project5_311555026/target/ProxyArp-1.0-SNAPSHOT.oar
