--- a/313552034_fin/config/R1/frr.conf
+++ b/313552034_fin/config/R1/frr.conf
@@ -2,7 +2,7 @@
 !
 frr defaults datacenter
 !
-fpm connection ip 192.168.100.2 port 2620
+fpm connection ip 192.168.100.1 port 2620
 
 router bgp 65820
 bgp router-id 192.168.70.82
@@ -19,6 +19,12 @@ neighbor 192.168.70.253 timers connect 5
 neighbor 192.168.70.253 advertisement-interval 5
 neighbor 192.168.70.253 ebgp-multihop
 neighbor 192.168.70.253 solo
+
+neighbor 192.168.70.80 remote-as 65800
+neighbor 192.168.70.80 timers connect 5
+neighbor 192.168.70.80 advertisement-interval 5
+neighbor 192.168.70.80 ebgp-multihop
+
 
 neighbor fd63::2 remote-as 65821
 neighbor fd63::2 timers connect 5
